syntax = "proto3";

package tensorflow.serv ng;

 mport "tensorflow_serv ng/ap s/model.proto";
 mport "tensorflow_serv ng/conf g/logg ng_conf g.proto";

opt on cc_enable_arenas = true;

//  tadata logged along w h t  request logs.
 ssage Log tadata {
  ModelSpec model_spec = 1;
  Sampl ngConf g sampl ng_conf g = 2;
  // L st of tags used to load t  relevant  taGraphDef from SavedModel.
  repeated str ng saved_model_tags = 3;
  // TODO(b/33279154): Add more  tadata as  nt oned  n t  bug.
}
