package com.tw ter.cr_m xer.s m lar y_eng ne

 mport com.tw ter.cr_m xer.model.S m lar yEng ne nfo
 mport com.tw ter.cr_m xer.model.S ce nfo
 mport com.tw ter.cr_m xer.model.T etW hScore
 mport com.tw ter.cr_m xer.param.Consu rBasedWalsParams
 mport com.tw ter.cr_m xer.s m lar y_eng ne.Consu rBasedWalsS m lar yEng ne.Query
 mport com.tw ter.cr_m xer.thr ftscala.S m lar yEng neType
 mport com.tw ter.cr_m xer.thr ftscala.S ceType
 mport com.tw ter.f nagle.stats.StatsRece ver
 mport com.tw ter.s mclusters_v2.thr ftscala. nternal d
 mport com.tw ter.storehaus.ReadableStore
 mport com.tw ter.t  l nes.conf gap 
 mport com.tw ter.ut l.Future
 mport  o.grpc.ManagedChannel
 mport tensorflow.serv ng.Pred ct.Pred ctRequest
 mport tensorflow.serv ng.Pred ct.Pred ctResponse
 mport tensorflow.serv ng.Pred ct onServ ceGrpc
 mport org.tensorflow.example.Feature
 mport org.tensorflow.example. nt64L st
 mport org.tensorflow.example.FloatL st
 mport org.tensorflow.example.Features
 mport org.tensorflow.example.Example
 mport tensorflow.serv ng.Model
 mport org.tensorflow.fra work.TensorProto
 mport org.tensorflow.fra work.DataType
 mport org.tensorflow.fra work.TensorShapeProto
 mport com.tw ter.f nagle.grpc.FutureConverters
 mport java.ut l.ArrayL st
 mport java.lang
 mport com.tw ter.ut l.Return
 mport com.tw ter.ut l.Throw
 mport java.ut l.concurrent.ConcurrentHashMap
 mport scala.jdk.Collect onConverters._

// Stats object ma nta n a set of stats that are spec f c to t  Wals Eng ne.
case class WalsStats(scope: Str ng, scopedStats: StatsRece ver) {

  val requestStat = scopedStats.scope(scope)
  val  nputS gnalS ze = requestStat.stat(" nput_s gnal_s ze")

  val latency = requestStat.stat("latency_ms")
  val latencyOnError = requestStat.stat("error_latency_ms")
  val latencyOnSuccess = requestStat.stat("success_latency_ms")

  val requests = requestStat.counter("requests")
  val success = requestStat.counter("success")
  val fa lures = requestStat.scope("fa lures")

  def onFa lure(t: Throwable, startT  Ms: Long) {
    val durat on = System.currentT  M ll s() - startT  Ms
    latency.add(durat on)
    latencyOnError.add(durat on)
    fa lures.counter(t.getClass.getNa ). ncr()
  }

  def onSuccess(startT  Ms: Long) {
    val durat on = System.currentT  M ll s() - startT  Ms
    latency.add(durat on)
    latencyOnSuccess.add(durat on)
    success. ncr()
  }
}

// StatsMap ma nta ns a mapp ng from Model's  nput s gnature to a stats rece ver
// T  Wals model suports mult ple  nput s gnature wh ch can run d fferent graphs  nternally and
// can have a d fferent performance prof le.
//  nvok ng StatsRece ver.stat() on each request can create a new stat object and can be expens ve
//  n performance cr  cal paths.
object WalsStatsMap {
  val mapp ng = new ConcurrentHashMap[Str ng, WalsStats]()

  def get(scope: Str ng, scopedStats: StatsRece ver): WalsStats = {
    mapp ng.compute fAbsent(scope, (scope) => WalsStats(scope, scopedStats))
  }
}

case class Consu rBasedWalsS m lar yEng ne(
  ho Nav GRPCCl ent: ManagedChannel,
  adsFavedNav GRPCCl ent: ManagedChannel,
  adsMonet zableNav GRPCCl ent: ManagedChannel,
  statsRece ver: StatsRece ver)
    extends ReadableStore[
      Query,
      Seq[T etW hScore]
    ] {

  overr de def get(
    query: Consu rBasedWalsS m lar yEng ne.Query
  ): Future[Opt on[Seq[T etW hScore]]] = {
    val startT  Ms = System.currentT  M ll s()
    val stats =
      WalsStatsMap.get(
        query.w lyNsNa  + "/" + query.modelS gnatureNa ,
        statsRece ver.scope("Nav Pred ct onServ ce")
      )
    stats.requests. ncr()
    stats. nputS gnalS ze.add(query.s ce ds.s ze)
    try {
      // avo d  nference calls  s s ce s gnals are empty
       f (query.s ce ds. sEmpty) {
        Future.value(So (Seq.empty))
      } else {
        val grpcCl ent = query.w lyNsNa  match {
          case "nav -wals-recom nded-t ets-ho -cl ent" => ho Nav GRPCCl ent
          case "nav -wals-ads-faved-t ets" => adsFavedNav GRPCCl ent
          case "nav -wals-ads-monet zable-t ets" => adsFavedNav GRPCCl ent
          // default to ho Nav GRPCCl ent
          case _ => ho Nav GRPCCl ent
        }
        val stub = Pred ct onServ ceGrpc.newFutureStub(grpcCl ent)
        val  nferRequest = getModel nput(query)

        FutureConverters
          .R chL stenableFuture(stub.pred ct( nferRequest)).toTw ter
          .transform {
            case Return(resp) =>
              stats.onSuccess(startT  Ms)
              Future.value(So (getModelOutput(query, resp)))
            case Throw(e) =>
              stats.onFa lure(e, startT  Ms)
              Future.except on(e)
          }
      }
    } catch {
      case e: Throwable => Future.except on(e)
    }
  }

  def getFeaturesForRecom ndat ons(query: Consu rBasedWalsS m lar yEng ne.Query): Example = {
    val t et ds = new ArrayL st[lang.Long]()
    val t etFave  ght = new ArrayL st[lang.Float]()

    query.s ce ds.foreach { s ce nfo =>
      val   ght = s ce nfo.s ceType match {
        case S ceType.T etFavor e | S ceType.Ret et => 1.0f
        // currently no-op - as   do not get negat ve s gnals
        case S ceType.T etDontL ke | S ceType.T etReport | S ceType.AccountMute |
            S ceType.AccountBlock =>
          0.0f
        case _ => 0.0f
      }
      s ce nfo. nternal d match {
        case  nternal d.T et d(t et d) =>
          t et ds.add(t et d)
          t etFave  ght.add(  ght)
        case _ =>
          throw new  llegalArgu ntExcept on(
            s" nval d  nternal D - does not conta n T et d for S ce S gnal: ${s ce nfo}")
      }
    }

    val t et dsFeature =
      Feature
        .newBu lder().set nt64L st(
           nt64L st
            .newBu lder().addAllValue(t et ds).bu ld()
        ).bu ld()

    val t et  ghtsFeature = Feature
      .newBu lder().setFloatL st(
        FloatL st.newBu lder().addAllValue(t etFave  ght).bu ld()).bu ld()

    val features = Features
      .newBu lder()
      .putFeature("t et_ ds", t et dsFeature)
      .putFeature("t et_  ghts", t et  ghtsFeature)
      .bu ld()
    Example.newBu lder().setFeatures(features).bu ld()
  }

  def getModel nput(query: Consu rBasedWalsS m lar yEng ne.Query): Pred ctRequest = {
    val tfExample = getFeaturesForRecom ndat ons(query)

    val  nferenceRequest = Pred ctRequest
      .newBu lder()
      .setModelSpec(
        Model.ModelSpec
          .newBu lder()
          .setNa (query.modelNa )
          .setS gnatureNa (query.modelS gnatureNa ))
      .put nputs(
        query.model nputNa ,
        TensorProto
          .newBu lder()
          .setDtype(DataType.DT_STR NG)
          .setTensorShape(TensorShapeProto
            .newBu lder()
            .addD m(TensorShapeProto.D m.newBu lder().setS ze(1)))
          .addStr ngVal(tfExample.toByteStr ng)
          .bu ld()
      ).bu ld()
     nferenceRequest
  }

  def getModelOutput(query: Query, response: Pred ctResponse): Seq[T etW hScore] = {
    val outputNa  = query.modelOutputNa 
     f (response.conta nsOutputs(outputNa )) {
      val t etL st = response.getOutputsMap
        .get(outputNa )
        .get nt64ValL st.asScala
      t etL st.z p(t etL st.s ze to 1 by -1).map { (t etW hScore) =>
        T etW hScore(t etW hScore._1, t etW hScore._2.toLong)
      }
    } else {
      Seq.empty
    }
  }
}

object Consu rBasedWalsS m lar yEng ne {
  case class Query(
    s ce ds: Seq[S ce nfo],
    modelNa : Str ng,
    model nputNa : Str ng,
    modelOutputNa : Str ng,
    modelS gnatureNa : Str ng,
    w lyNsNa : Str ng,
  )

  def fromParams(
    s ce ds: Seq[S ce nfo],
    params: conf gap .Params,
  ): Eng neQuery[Query] = {
    Eng neQuery(
      Query(
        s ce ds,
        params(Consu rBasedWalsParams.ModelNa Param),
        params(Consu rBasedWalsParams.Model nputNa Param),
        params(Consu rBasedWalsParams.ModelOutputNa Param),
        params(Consu rBasedWalsParams.ModelS gnatureNa Param),
        params(Consu rBasedWalsParams.W lyNsNa Param),
      ),
      params
    )
  }

  def toS m lar yEng ne nfo(
    score: Double
  ): S m lar yEng ne nfo = {
    S m lar yEng ne nfo(
      s m lar yEng neType = S m lar yEng neType.Consu rBasedWalsANN,
      model d = None,
      score = So (score))
  }
}
